--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+Mon Mar  7 09:45:18 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* contrib/.cvsignore:
+
+	Remove unrelated part of last patch.  
+
+Mon Mar  7 09:44:33 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* contrib/: .cvsignore, Makefile.am:
+
+	Change to .awk script. Spotted by zas.  
+
+Mon Mar  7 09:23:44 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* contrib/conv/.cvsignore:
+
+	m00p.  
+
+Mon Mar  7 09:03:15 2005  Laurent Monin <zas@norz.org>:
+
+	* src/: setup.h, document/html/parser.c:
+
+	Set maximum refresh delay in setup.h using HTTP_REFRESH_MAX_DELAY.  
+
 Sun Mar  6 17:20:05 2005  Laurent Monin <zas@norz.org>:
 
 	* doc/hacking.txt:
