--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Thu Mar 10 15:30:13 2005  Laurent Monin <zas@norz.org>:
+
+	* src/lowlevel/timers.h:
+
+	Update comment to reflect last change.  
+
+Thu Mar 10 13:47:14 2005  Jonas Fonseca <fonseca@diku.dk>:
+
+	* src/lowlevel/timers.h:
+
+	Use struct timer instead of void pointer. It help when debugging.  
+
 Wed Mar  9 18:24:05 2005  Laurent Monin <zas@norz.org>:
 
 	* src/protocol/ftp/ftp.c:
