--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar 14 22:46:27 2005  Petr Baudis <pasky@ucw.cz>:
+
+	* src/terminal/color.c:
+
+	Corrected blue on red background contrast correction.  
+
 Sat Mar 12 00:25:43 2005  Laurent Monin <zas@norz.org>:
 
 	* src/protocol/ftp/ftp.c:
