--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Mar 16 20:39:52 2005  Varga Balázs <vinnui@ent.hu>:
+
+	* po/hu.po:
+
+	Updated hungarian translation.  
+
 Mon Mar 14 22:46:27 2005  Petr Baudis <pasky@ucw.cz>:
 
 	* src/terminal/color.c:
